--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~8.2.9",
     "@angular/service-worker": "~8.2.9",
     "hammerjs": "^2.0.8",
+    "ngx-indexed-db": "^3.0.6",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
